[gd_scene load_steps=2 format=3 uid="uid://duftknfjrsqaw"]

[ext_resource type="Script" path="res://Scripts/StartScreen/start_screen.gd" id="1_0m55e"]

[node name="StartScreen" type="Node"]
script = ExtResource("1_0m55e")

[node name="MainBackground" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="MainBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.72549, 0.960784, 0.921569, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MainBackground"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -33.0
offset_right = 101.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="StartGame" type="Button" parent="MainBackground/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="LoadGame" type="Button" parent="MainBackground/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Settings" type="Button" parent="MainBackground/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Panel" type="Panel" parent="MainBackground"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.5
offset_top = 16.0
offset_right = 42.5
offset_bottom = 46.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="MainBackground/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Slay The Spire Clone"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainBackground/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MainBackground/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MainBackground/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
